<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestConnexionActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar_layout"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="36dp" />

    <Button
        android:id="@+id/controlerPlateforme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:enabled="true"
        android:onClick="LancerControlePlateforme"
        android:text="@string/controle_plateforme"
        android:textColor="@color/boutons_couleur_texte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <Button
        android:id="@+id/controlerBras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:enabled="true"
        android:onClick="LancerControleBras"
        android:text="@string/controle_bras"
        android:textColor="@color/boutons_couleur_texte"
        app:layout_constraintBottom_toTopOf="@+id/controlerPlateforme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="272dp"
        android:layout_height="72dp"
        android:text="@string/texte_indication_reseau_accueil"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/controlerBras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>